@@ -13,3 +13,5 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+
+script: pytest
