@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Update README & Added travis and requirements
+
 1.1.2
 -----
 
